--- a/Arc-Lighter/styles/theme-selector.less
+++ b/Arc-Lighter/styles/theme-selector.less
@@ -3,13 +3,52 @@
 //------------------------------------------------------------
 // Theme selector window
 //------------------------------------------------------------
+.modal-container .modal {
+	background: @clrWindowBg !important;
+	border-radius: 3px !important;
+
+	.modal-close {
+		width: 16px !important;
+		height: 16px !important;
+		zoom: 0.9 !important;
+		margin: 8px;
+		content: url(mailspring://Arc/styles/images/window-buttons/titlebutton-close.png);
+
+		&:hover {
+			content: url(mailspring://Arc/styles/images/window-buttons/titlebutton-close-hover.png);
+		}
+
+		&:active {
+			content: url(mailspring://Arc/styles/images/window-buttons/titlebutton-close-active.png);
+		}
+
+		.platform-linux.is-blurred & {
+			content: url(mailspring://Arc/styles/images/window-buttons/titlebutton-close-backdrop.png);
+		}
+	}
+}
+
 .theme-picker {
-	//---------------------------------
-	// Create theme link
-	//---------------------------------
-	.create-theme a {
-		color: @colorAccent !important;
-		cursor: pointer;
+	h4 {
+		color: @clrText !important;
+		font-size: 15.5px;
+		margin-top: -16px;
+		margin-bottom: 0;
+	}
+
+	h4 + div {
+		color: @clrText !important;
+		font-size: 13px !important;
+	}
+
+	.create-theme {
+		margin-top: 10px;
+
+		a {
+			color: @clrLink !important;
+			text-decoration: underline;
+			cursor: pointer;
+		}
 	}
 }
 
@@ -17,12 +56,5 @@
 // Scroll bar
 //------------------------------------------------------------
 .theme-picker .scrollbar-track {
- background: @colorListBg;
- border-left: none;
- width: 10px;
-
- .scrollbar-handle {
-  background: fade(darken(@colorListBg, 45%), 40%);
-  border: none;
- }
+	.arc-scrollbar();
 }
