--- a/Arc-Lighter/styles/sidebar-toolbar.less
+++ b/Arc-Lighter/styles/sidebar-toolbar.less
@@ -5,8 +5,8 @@
 //------------------------------------------------------------
 .toolbar-RootSidebar {
 	height: 100%;
-	background-color: @colorSidebarBg;
-	border-right: 1px solid @colorSidebarBorder;
+	background-color: @clrSidebarBg;
+	border-right: 1px solid @clrSidebarBorder;
 
 	//---------------------------------
 	// New email button
@@ -17,27 +17,22 @@
 		border: 1px solid transparent;
 		border-radius: 3px;
 		height: 26px;
-		padding-bottom: 10px;
 
 		img.content-mask {
-			background-color: @colorSidebarText;
+			background-color: @clrSidebarBtnText;
 		}
 
 		&:hover {
-			background-color: @colorBtnBgLight;
-			border-color: @colorBtnBorderLight;
-
-			img.content-mask {
-				background-color: @colorSidebarText;
-			}
+			background-color: @clrSidebarBtnBgHover;
+			border-color: @clrSidebarBtnBorderHover;
 		}
 
 		&:active {
-			background-color: @colorBtnBgActiveLight;
-			border-color: @colorBtnBorderActiveLight;
+			background-color: @clrSidebarBtnBgActive;
+			border-color: @clrSidebarBtnBorderActive;
 
 			img.content-mask{
-				background-color: @colorBtnTextActive;
+				background-color: @clrSidebarBtnTextActive;
 			}
 		}
 
@@ -52,8 +47,8 @@
 			}
 
 			&:hover {
-				background-color: @colorBtnBgLight;
-				border-color: @colorBtnBorderLight;
+				background-color: @clrSidebarBtnBgHover;
+				border-color: @clrSidebarBtnBorderHover;
 			}
 		}
 	}
@@ -63,24 +58,22 @@
 // Activity toolbar
 //------------------------------------------------------------
 .toolbar-activity {
-	margin-top: 2px;
-
 	//---------------------------------
 	// Activity icon
 	//---------------------------------
 	.activity-toolbar-icon {
-		background-color: @colorSidebarTextFaded;
+		background-color: @clrSidebarTextFaded;
 
 		&:hover {
-			background-color: @colorSidebarText;
+			background-color: @clrSidebarText;
 			cursor: pointer;
 		}
 
 		&.unread {
-			background-color: @colorAccent;
+			background-color: @clrAccent;
 
 			&:hover {
-				background-color: @colorAccent;
+				background-color: @clrAccent;
 			}
 		}
 	}
@@ -89,7 +82,7 @@
 	// Activity unread count
 	//---------------------------------
 	.unread-count.active {
-		background: @colorAccent;
+		background: @clrAccent;
 		font-weight: 600;
 		padding-top: 1px;
 	}
@@ -99,27 +92,63 @@
 // Activity dropdown menu
 //------------------------------------------------------------
 .activity-list-container {
-	background-color: @colorListBg;
+	background-color: @clrListBg;
+	border: 1px solid @clrWindowBorder;
 
 	//---------------------------------
 	// Activity dropdown items
 	//---------------------------------
 	.activity-list-item {
-		border-bottom: 1px solid @colorBorder;
-		color: @colorListText;
+		border-bottom: 1px solid @clrWindowBorder;
+		color: @clrListText;
+
+		.timestamp {
+			color: @clrListTextFaded;
+		}
 
 		&:hover {
-			background-color: @colorListItemHover;
+			background-color: @clrListHover;
 		}
 
 		&.unread,
 		&.unread:hover {
-			background-color: @colorAccent;
-			color: @colorListTextActive;
+			background-color: @clrAccent;
+			color: @clrListTextActive;
 
 			.timestamp {
-				color: @colorListTextActiveFaded;
+				color: @clrListTextActiveFaded;
 			}
+		}
+	}
+
+	.activity-list-toggle-item {
+		background-color: @clrListBg;
+		color: @clrListTextFaded;
+
+		.timestamp {
+			color: @clrListTextFaded;
+		}
+
+		&:last-child {
+			border-bottom: 1px solid @clrWindowBorder;
+		}
+	}
+
+	//---------------------------------
+	// Activity dropdown footer
+	//---------------------------------
+	.activity-summary-cta {
+		background: @clrWindowBg;
+		border-top: 1px solid @clrWindowBorder;
+		color: @clrTextFadedLess;
+
+		&:hover {
+			cursor: pointer;
+			color: @clrAccent;
+		}
+
+		&:active {
+			background: @clrWindowBg;
 		}
 	}
 
@@ -127,13 +156,6 @@
 	// Activity dropdown scrollbar
 	//---------------------------------
 	.scrollbar-track {
-		background: @colorListBg;
-		border-left: none;
-		width: 10px;
-
-		.scrollbar-handle {
-			background: fade(darken(@colorListBg, 45%), 40%);
-			border: none;
-		}
+		.arc-scrollbar();
 	}
 }
