Arc-Lighter: Update sidebar color variables

--- a/Arc-Lighter/styles/arc-variables.less
+++ b/Arc-Lighter/styles/arc-variables.less
@@ -16,20 +16,20 @@
 //---------------------------------
 // Sidebar
 //---------------------------------
-@clrSidebarBg: #353945;
-@clrSidebarBorder: @clrSidebarBg;
-@clrSidebarHover: rgba(186, 195, 207, 0.15);
-@clrSidebarText: #bac3cf;
+@clrSidebarBg: #f5f6f7;
+@clrSidebarBorder: #dcdfe3;
+@clrSidebarHover: rgba(92, 97, 108, 0.15);
+@clrSidebarText: #5c616c;
 @clrSidebarTextFaded: fade(@clrSidebarText, 50%);
 @clrSidebarTextActive: #ffffff;
 @clrSidebarBgActivity: darken(@clrSidebarBg, 3%);
 @clrSidebarTextActivity: @clrSidebarText;
 
-@clrSidebarBtnBgHover: rgba(95, 105, 127, 0.37);
-@clrSidebarBtnBorderHover: rgba(21, 23, 28, 0.37);
+@clrSidebarBtnBgHover: rgba(251, 251, 252, 0.9);
+@clrSidebarBtnBorderHover: #d9dbe0;
 @clrSidebarBtnBgActive: @clrAccent;
 @clrSidebarBtnBorderActive: @clrAccent;
-@clrSidebarBtnText:rgba(207, 218, 231, 0.8);
+@clrSidebarBtnText:rgba(82, 93, 118, 0.8);
 @clrSidebarBtnTextActive: #ffffff;
 
 //---------------------------------
