Arc-Lighter: Update sidebar scrollbar color variables

--- a/Arc-Lighter/styles/arc-variables.less
+++ b/Arc-Lighter/styles/arc-variables.less
@@ -208,11 +208,11 @@
 }
 
 .arc-scrollbar-sidebar() {
-	@trackBg: rgba(42, 45, 55, 0.95);
-	@trackBorder: rgba(42, 45, 55, 0.95);
-	@sliderOverlay: #e7eaee;
-	@sliderNormal: rgba(231, 234, 238, 0.7);
-	@sliderHover: #f6f7f9;
+	@trackBg: rgba(231, 233, 236, 0.95);
+	@trackBorder: rgba(231, 233, 236, 0.95);
+	@sliderOverlay: #818794;
+	@sliderNormal: rgba(129, 135, 148, 0.7);
+	@sliderHover: #8f949f;
 	@sliderActive: #5294e2;
 
 	background: transparent;
