--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -37,6 +37,7 @@
 //---------------------------------
 @clrWindowBg: #383c4a;
 @clrWindowBorder: #262a33;
+@clrTitlebarBorder: #262a33;
 @clrText: #bac3cf;
 @clrTextFaded: fade(@clrText, 50%);
 @clrTextFadedLess: fade(@clrText, 80%);
