--- a/Arc/styles/arc-variables.less
+++ b/Arc/styles/arc-variables.less
@@ -37,6 +37,7 @@
 //---------------------------------
 @clrWindowBg: #f5f6f7;
 @clrWindowBorder: #d4d5db;
+@clrTitlebarBorder: #d4d5db;
 @clrText: #231f20;
 @clrTextFaded: fade(@clrText, 50%);
 @clrTextFadedLess: fade(@clrText, 80%);
