--- a/Arc/styles/common.less
+++ b/Arc/styles/common.less
@@ -4,7 +4,7 @@
 // Main window
 //------------------------------------------------------------
 .sheet-container {
-	border-top: 1px solid @clrWindowBorder;
+	border-top: 1px solid @clrTitlebarBorder;
 }
 
 .sheet {
