All: use variables for control images

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -152,6 +152,15 @@
 @clrToastButtonBorderActive: #2b2e39;
 
 //------------------------------------------------------------
+// Image variables
+//------------------------------------------------------------
+@imgCheckChecked: url(mailspring://Arc-Dark/styles/images/controls/checkbox-checked-dark.png);
+@imgCheckUnchecked: url(mailspring://Arc-Dark/styles/images/controls/checkbox-unchecked-dark.png);
+@imgCheckCheckedSelected: url(mailspring://Arc-Dark/styles/images/controls/checkbox-checked-selected.png);
+@imgRadioChecked: url(mailspring://Arc-Dark/styles/images/controls/radio-checked-dark.png);
+@imgRadioUnchecked: url(mailspring://Arc-Dark/styles/images/controls/radio-unchecked-dark.png);
+
+//------------------------------------------------------------
 // LESS mixins
 //------------------------------------------------------------
 .arc-control(@image, @size) {
