--- a/Arc-Darker/styles/arc-variables.less
+++ b/Arc-Darker/styles/arc-variables.less
@@ -152,6 +152,15 @@
 @clrToastButtonBorderActive: #2b2e39;
 
 //------------------------------------------------------------
+// Image variables
+//------------------------------------------------------------
+@imgCheckChecked: url(mailspring://Arc/styles/images/controls/checkbox-checked.png);
+@imgCheckUnchecked: url(mailspring://Arc/styles/images/controls/checkbox-unchecked.png);
+@imgCheckCheckedSelected: url(mailspring://Arc/styles/images/controls/checkbox-checked-selected.png);
+@imgRadioChecked: url(mailspring://Arc/styles/images/controls/radio-checked.png);
+@imgRadioUnchecked: url(mailspring://Arc/styles/images/controls/radio-unchecked.png);
+
+//------------------------------------------------------------
 // LESS mixins
 //------------------------------------------------------------
 .arc-control(@image, @size) {
