--- a/Arc-Darker/styles/common.less
+++ b/Arc-Darker/styles/common.less
@@ -218,14 +218,14 @@ select {
 	padding: 5px 20px 5px 28px;
 
 	&.checked {
-		background-image: url(mailspring://Arc/styles/images/controls/checkbox-checked.png);
+		background-image: @imgCheckChecked;
 		background-size: 16px;
 		background-position-y: 5px;
 
 		&:not(.active):not(.selected):hover,
 		&.selected,
 		&:active {
-			background-image: url(mailspring://Arc/styles/images/controls/checkbox-checked-selected.png);
+			background-image: @imgCheckCheckedSelected;
 		}
 	}
 }
@@ -234,7 +234,7 @@ select {
 	padding: 5px 20px 5px 32px;
 
 	&.checked {
-		background-image: url(mailspring://Arc/styles/images/controls/checkbox-checked.png);
+		background-image: @imgCheckChecked;
 		background-size: 16px;
 		background-position-y: 7px;
 		padding: 5px 20px 5px 32px;
@@ -242,7 +242,7 @@ select {
 		&:not(.active):not(.selected):hover,
 		&.selected,
 		&:active {
-			background-image: url(mailspring://Arc/styles/images/controls/checkbox-checked-selected.png);
+			background-image: @imgCheckCheckedSelected;
 		}
 	}
 }
