--- a/Arc-Dark/styles/preferences.less
+++ b/Arc-Dark/styles/preferences.less
@@ -136,11 +136,11 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 	//---------------------------------
 	input[type='checkbox'] {
 		-webkit-appearance: none;
-		.arc-control(url(mailspring://Arc-Dark/styles/images/controls/checkbox-unchecked-dark.png), 16px);
+		.arc-control(@imgCheckUnchecked, 16px);
 		top: 3px;
 
 		&:checked {
-			.arc-control(url(mailspring://Arc-Dark/styles/images/controls/checkbox-checked-dark.png), 16px);
+			.arc-control(@imgCheckChecked, 16px);
 		}
 	}
 
@@ -149,11 +149,11 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 	//---------------------------------
 	input[type='radio'] {
 		-webkit-appearance: none;
-		.arc-control(url(mailspring://Arc-Dark/styles/images/controls/radio-unchecked-dark.png), 16px);
+		.arc-control(@imgRadioUnchecked, 16px);
 		top: -2px;
 
 		&:checked {
-			.arc-control(url(mailspring://Arc-Dark/styles/images/controls/radio-checked-dark.png), 16px);
+			.arc-control(@imgRadioChecked, 16px);
 		}
 	}
 
