--- a/Arc-Lighter/styles/threadlist.less
+++ b/Arc-Lighter/styles/threadlist.less
@@ -103,7 +103,7 @@
 		padding: 10px 11px 12px;
 
 		.inner {
-			.arc-control(url(mailspring://Arc/styles/images/controls/checkbox-unchecked.png), 16px);
+			.arc-control(@imgCheckUnchecked, 16px);
 		}
 	}
 
@@ -111,7 +111,7 @@
 		color: @clrListTextActive;
 
 		.checkmark .inner {
-			.arc-control(url(mailspring://Arc/styles/images/controls/checkbox-checked-selected.png), 16px);
+			.arc-control(@imgCheckCheckedSelected, 16px);
 		}
 	}
 }
