All: use variables for titlebar control buttons

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -160,6 +160,11 @@
 @imgRadioChecked: url(mailspring://Arc-Dark/styles/images/controls/radio-checked-dark.png);
 @imgRadioUnchecked: url(mailspring://Arc-Dark/styles/images/controls/radio-unchecked-dark.png);
 
+@imgBtnClose: url(mailspring://Arc-Dark/styles/images/window-buttons/titlebutton-close-dark.png);
+@imgBtnCloseHover: url(mailspring://Arc-Dark/styles/images/window-buttons/titlebutton-close-hover-dark.png);
+@imgBtnCloseActive: url(mailspring://Arc-Dark/styles/images/window-buttons/titlebutton-close-active-dark.png);
+@imgBtnCloseBackdrop: url(mailspring://Arc-Dark/styles/images/window-buttons/titlebutton-close-backdrop-dark.png);
+
 //------------------------------------------------------------
 // LESS mixins
 //------------------------------------------------------------
