--- a/Arc-Darker/styles/arc-variables.less
+++ b/Arc-Darker/styles/arc-variables.less
@@ -160,6 +160,11 @@
 @imgRadioChecked: url(mailspring://Arc/styles/images/controls/radio-checked.png);
 @imgRadioUnchecked: url(mailspring://Arc/styles/images/controls/radio-unchecked.png);
 
+@imgBtnClose: url(mailspring://Arc/styles/images/window-buttons/titlebutton-close.png);
+@imgBtnCloseHover: url(mailspring://Arc/styles/images/window-buttons/titlebutton-close-hover.png);
+@imgBtnCloseActive: url(mailspring://Arc/styles/images/window-buttons/titlebutton-close-active.png);
+@imgBtnCloseBackdrop: url(mailspring://Arc/styles/images/window-buttons/titlebutton-close-backdrop.png);
+
 //------------------------------------------------------------
 // LESS mixins
 //------------------------------------------------------------
