--- a/Arc-Darker/styles/sidebar.less
+++ b/Arc-Darker/styles/sidebar.less
@@ -55,6 +55,8 @@
 		-webkit-mask-repeat: no-repeat;
 		-webkit-mask-image: url(../static/images/sidebar/account-switcher-dropdown@2x.png);
 		-webkit-mask-position: 0px 0px;
+		width: 34px !important;
+		height: 34px !important;
 		margin-top: 8px;
 	}
 
