All: ensure consistent use of accent color variable

--- a/Arc-Darker/styles/arc-variables.less
+++ b/Arc-Darker/styles/arc-variables.less
@@ -184,7 +184,7 @@
 	@sliderOverlay: #8a8e96;
 	@sliderNormal: #b8babf;
 	@sliderHover: #c7c9cd;
-	@sliderActive: #5294e2;
+	@sliderActive: @clrAccent;
 
 	background: transparent;
 	border-left: 1px solid transparent;
@@ -228,7 +228,7 @@
 	@sliderOverlay: #e7eaee;
 	@sliderNormal: rgba(231, 234, 238, 0.7);
 	@sliderHover: #f6f7f9;
-	@sliderActive: #5294e2;
+	@sliderActive: @clrAccent;
 
 	background: transparent;
 	border-left: 1px solid transparent;
