--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -184,7 +184,7 @@
 	@sliderOverlay: #a5abb5;
 	@sliderNormal: #767b87;
 	@sliderHover: #676b78;
-	@sliderActive: #5294e2;
+	@sliderActive: @clrAccent;
 
 	background: transparent;
 	border-left: 1px solid transparent;
@@ -228,7 +228,7 @@
 	@sliderOverlay: #e7eaee;
 	@sliderNormal: rgba(231, 234, 238, 0.7);
 	@sliderHover: #f6f7f9;
-	@sliderActive: #5294e2;
+	@sliderActive: @clrAccent;
 
 	background: transparent;
 	border-left: 1px solid transparent;
