--- a/Arc-Lighter/styles/arc-variables.less
+++ b/Arc-Lighter/styles/arc-variables.less
@@ -184,7 +184,7 @@
 	@sliderOverlay: #8a8e96;
 	@sliderNormal: #b8babf;
 	@sliderHover: #c7c9cd;
-	@sliderActive: #5294e2;
+	@sliderActive: @clrAccent;
 
 	background: transparent;
 	border-left: 1px solid transparent;
@@ -228,7 +228,7 @@
 	@sliderOverlay: #818794;
 	@sliderNormal: rgba(129, 135, 148, 0.7);
 	@sliderHover: #8f949f;
-	@sliderActive: #5294e2;
+	@sliderActive: @clrAccent;
 
 	background: transparent;
 	border-left: 1px solid transparent;
